--- a/inst/WorldBank/www/index.html
+++ b/inst/WorldBank/www/index.html
@@ -81,10 +81,10 @@
     <!-- <div id="dummyDiv" class="shiny-text-output"></div> -->
     <div id="control-panel-backdrop" class="bd-hidden"></div>
     <div id="d3tooltip" class="hidden"></div>
-    <div id="resolution-alert" class="alert alert-danger alert-dismissable">
+   <!--  <div id="resolution-alert" class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
       Warning! This application was not designed to be used at this window size / resolution.
-    </div>
+    </div> -->
     <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -92,19 +92,19 @@
           <a class="navbar-brand" href="javascript:">Trelliscope Viewer</a>
           <div class="left-icons">
             <ul>
-              <a data-toggle="modal" data-target="#displayInfoModal" href="javascript:"><li><i class="icon-file-info"></i></li></a>
+<!--               <a data-toggle="modal" data-target="#displayInfoModal" href="javascript:"><li><i class="icon-file-info"></i></li></a> -->
               <span id="headerDisplayNameOutput" class="shiny-text-output"></span>
             </ul>
           </div>
           <div class="center-icons shiny-template-output" id="panelPageNavOutput" data-post-render="panelPageNavOutputPostRender">
           </div>
-          <div class="right-icons">
+<!--           <div class="right-icons">
             <ul>
               <a data-toggle="modal" data-target="#userModal" href="javascript:"><li><i class="icon-user"></i></li></a>
               <a data-toggle="modal" data-target="#openModal" href="javascript:"><li><i class="icon-folder-open"></i></li></a>
               <a data-toggle="modal" data-target="#aboutModal" href="javascript:"><li><i class="icon-info-circle"></i></li></a>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -117,6 +117,12 @@
             <img src="assets/images/logo.png">
           </div>
           <div class="list-group list-group-sidebar">
+
+            <a data-toggle="modal" data-target="#openModal" href="javascript:" class="list-group-item">
+              <i class="icon-folder-open"></i>
+            <span class="list-group-text">Open Display</span>
+            </a>
+
             <a href="javascript:" class="list-group-item active list-group-item-primary list-group-item-short">
             <span class="list-group-header">View Options</span>
             </a>
@@ -140,6 +146,11 @@
             <a href="javascript:" class="list-group-item active list-group-item-primary list-group-item-short">
               <span class="list-group-header">Filters</span>
             </a>
+            <a href="javascript:" class="list-group-item" data-divlink="active-cog" id="active-cog-nav-link">
+               <!-- data-action="cogTableSetFromExposedState"> -->
+              <i class="icon-active-cog"></i>
+              <span class="list-group-text">Active Filters</span>
+            </a>            
             <a href="javascript:" class="list-group-item" data-divlink="geo-filter" id="geo-filter-nav-link">
               <i class="icon-earth"></i>
               <span class="list-group-text">Geographic Filter</span>
@@ -205,7 +216,7 @@
     </div>
   
   <!-- Modal -->
-  <div class="modal fade" id="displayInfoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <!--  <div class="modal fade" id="displayInfoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -216,15 +227,15 @@
           Coming soon...
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
           <!-- <button type="button" class="btn btn-primary">Login</button> -->
-        </div>
+<!--         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Modal -->
-  <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <!--  <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -235,12 +246,12 @@
           Coming soon...
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
           <!-- <button type="button" class="btn btn-primary">Login</button> -->
-        </div>
+<!--         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <!-- Modal -->
   <div class="modal fade" id="openModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -261,7 +272,7 @@
     </div>
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <!--  <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -373,7 +384,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div id="related-layout-container" class="rl-layout" style="display: none"></div>
   <div class="related-layout-box rl-layout" id="box0" style="display: none">
     <div><span class="box-group-label"></span> / <span class="box-name-label"></span></div>
