--- a/inst/WorldBank/www/assets/crosslet/data/test2.html
+++ b/inst/WorldBank/www/assets/crosslet/data/test2.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width">
     
-    <!-- <link rel="stylesheet/less" type="text/css" href="less/styles.less" /> -->
+    <link rel="stylesheet/less" type="text/css" href="less/styles.less"/>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.3.1/less.min.js" type="text/javascript"></script>
      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
      <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div id="content" class="container">
-        <div id="map"></div>
+        <div id="map" style="height:100%"></div>
 </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js"></script>
