--- a/anonymizer/index.html
+++ b/anonymizer/index.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html><!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>
-<html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<!DOCTYPE html>
 <head>
+    <!--META-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Aalcer Data Anonymizer</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+
+    <!--CSS-->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,800italic,400,600,800" type="text/css">
     <link rel="stylesheet" href="js/plugins/icheck/skins/minimal/blue.css" type="text/css"/>
     <link rel="stylesheet" href="js/libs/css/ui-lightness/jquery-ui-1.9.2.custom.css" type="text/css"/>
     <link rel="stylesheet" href="css/App.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="http://cdn.datatables.net/1.10.4/css/jquery.dataTables.min.css">-->
     <link rel="stylesheet" href="css/custom.css" type="text/css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
     <!--CSV parser-->
     <script src="js/papaparse.min.js"></script>
     <!--Utilities-->
@@ -26,13 +24,13 @@
     <script src="js/filesaver.min.js"></script>
     <!--Application-->
     <script src="js/main.js"></script>
+    <!--Generate random data-->
+    <script src="js/chance.min.js"></script>
+
 </head>
 <body>
-<!--[if lt IE 7]><p class="browsehappy">You are using an
-    <strong>outdated</strong> browser. Please<a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-</p><![endif]-->
 <header id="header">
-    <h1 id="site-logo">
+    <h1 class=heading-inline id="site-logo">
         <a href="dashboard.html"> <img src="img/logo.png" alt="Alacer"> </a>
     </h1>
 
@@ -43,7 +41,6 @@
     <div id="content-header">
         <h1>Alacer Data Anonymizer</h1>
     </div>
-    <!-- #content-header -->
     <div id="content-container">
 
         <!--Define file browser control-- Then hide the control because it is difficult--><!--to style. Create new button to trigger the filer browser and a new label to display file name.-->
@@ -54,34 +51,32 @@
         <!-- Create visible button for the file input control. Cascade click event to file browser -->
         <input id="browse-button" type="button" onclick="document.getElementById('files').click()" class="btn btn-primary" value="Browse files"/>
 
-        <div id="instructions-anchor"></div>
+        <!--Placeholder for dynamic text-->
+        <div id="anchor-1"></div>
 
-        <div id="list-anchor"></div>
+        <!--Placeholder for dynamic text-->
+        <div id="anchor-2"></div>
 
         <!--Button to start the anonymization process-->
-        <button style="margin-top: 25px" id="anonymize-button" type="button" class="btn btn-primary" onclick="anonymize()">Anonymize
-        </button>
-
+        <button style="margin-top: 25px" id="anonymize-button" type="button" class="btn btn-primary" onclick="anonymize()">Anonymize</button>
     </div>
-    <!-- /#content-container -->
 </div>
 
+<!--Alacer Bootstrap related scripts-->
 <script src="js/libs/jquery-1.9.1.min.js"></script>
 <script src="js/libs/jquery-ui-1.9.2.custom.min.js"></script>
 <script src="js/libs/bootstrap.min.js"></script>
 <script src="js/App.js"></script>
-
 <script src="js/plugins/datatables/jquery.dataTables.min.js"></script>
-<!--<script src="//cdn.datatables.net/plug-ins/9dcbecd42ad/integration/bootstrap/3/dataTables.bootstrap.js"></script>-->
 <script src="js/plugins/datatables/DT_bootstrap.js"></script>
 <script src="js/plugins/tableCheckable/jquery.tableCheckable.js"></script>
 <script src="js/plugins/icheck/jquery.icheck.min.js"></script>
 
+<!--On ready code-->
 <script>
     $(document).ready(function () {
-        $('#anonymize-button').hide()
+        $('#anonymize-button').hide();
     });
 </script>
 
 </body>
-</html>
