--- a/inst/WorldBank/www/index.html
+++ b/inst/WorldBank/www/index.html
@@ -54,13 +54,13 @@
     <script src="assets/custom/shiny-trelliscope-io.js" type="text/javascript"></script>
 
     <!-- Testing -->
-      <link rel="stylesheet" href="/assets/tests/qunit/qunit.css">
-      <script src="/assets/tests/qunit/qunit.js"></script>
+      <link rel="stylesheet" href="assets/tests/qunit/qunit.css">
+      <script src="assets/tests/qunit/qunit.js"></script>
       <!-- Include the source code -->
-      <script src="/assets/tests/MyLib.js"></script>
+      <script src="assets/tests/MyLib.js"></script>
 
       <!-- Include the test suite(s) -->
-      <script src="/assets/tests/MyLib.test.js"></script>
+      <script src="assets/tests/MyLib.test.js"></script>
 
 
   </head>
@@ -105,7 +105,7 @@
           </div>
           <div class="list-group list-group-sidebar">
 
-            <a data-toggle="modal" data-target="#anonModal" href="javascript:" class="list-group-item">
+            <a data-toggle="modal" data-target="#anonModal"  class="list-group-item">
               <i class="fa fa-eraser"></i>
             <span class="list-group-text">Anonymize Data</span>
             </a>
