--- a/renaissance/cloak_instructions.html
+++ b/renaissance/cloak_instructions.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
 
-    <title>Navigation - Alacer</title>
+    <title>Data Cloaker - Alacer</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="">
@@ -132,42 +132,18 @@
 	
 		<nav id="sidebar">		
 			
-			<ul id="main-nav" class="open-active">		
+			<ul id="main-nav" class="open-active">			
 
-			<li class="">
-				<a href="navigation.html">
-					<i class="fa fa-home"></i> 
-					Home
-				</a>
-			</li>
-
-			<li class="">
-				<a href="cloak.html">
-					<i class="fa fa-eraser"></i> 
-					Cloak
-				</a>
-			</li>
-
-			<li class="">
-				<a>
-					<i class="fa fa-tasks"></i> 
-					Prepare
-				</a>
-			</li>			
-
-			<li class="">
-				<a>
-					<i class="fa fa-bar-chart"></i> 
-					Analyze
-				</a>
-			</li>			
-
-			<li class="">
-				<a>
-					<i class="fa fa-key"></i> 
-					Uncloak
-				</a>
-			</li>
+				<li class="">
+					<a href="cloak_instructions.html">
+						Instructions
+					</a>
+				</li>		
+				<li class="">
+					<a href="cloak.html">
+						Data Cloaker
+					</a>
+				</li>
 						
 			</ul>
 					
@@ -180,117 +156,36 @@
 	<div id="content">		
 		
 		<div id="content-header">
-			<h1>Alacer Offerings</h1>
+			<h1>Data Cloaker</h1>
+			<h4> Anonymize and remove sensitive data from .csv files </h4>	
 		</div> <!-- #content-header -->	
 
 
 		<div id="content-container">
 
-			<div class="row">
-				<div class="col-md-4">
 
-						<div class="portlet">
+		<h3>Description</h3>
+ The Data Cloak takes a single input file and creates two output files. The input file contains sensitive data the data that needs to be cloaked before it can be shared. The two output files the cloaked data and the secret data file. The cloaked data is meant to be shared with others. The secret data file contains the sensitive information and can be used to reconstruct or uncloak data at a later point in time.
+ 
+<h3>Security</h3>
+The Data Cloak run entirely in the browser and does not send any secret data over the network. In fact, once the Data Cloak is started, the computer can be disconnected from the network and it will continue to run.
 
-							<div class="portlet-header">
+The Data Cloak does not scramble values: it replaces values with randomly generated text. It is not possible for a third party to unscramble replaced values in the cloaked file without the secret file.
 
-								<h3>
-									<i class="fa fa-eraser"></i>
-									Data Cloaker
-								</h3>
+<h3>Usage</h3>
+The Data Cloak asks the user to select a single file to cloak. It must be a text file with delimited data, such as a comma-separate-value (CSV) file. The file MUST contain a header row with the name of each column. 
 
-							</div> <!-- /.portlet-header -->
+After a file is selected, the application lists the column names and the actions that can be performed on each one. The available actions are:
+<ul>
+<li><b>Retain as-is</b> The default action is to retain the data in the cloaked file. This information is not changed or obscured at all.</li>
+<li><b>Cloak</b> This action removes sensitive data. It replaces each value with a randomly generated string. If the real value of a field is "John Smith", then every occurrence of "John Smith" will be replaced with a new value, such as "tuleroll". The original data is written to the secret file.</li>
+<li><b>Remove</b> This action removes sensitive data. It excises the entire column from the cloaked data. The original data is written to the secret file.
+</ul>
 
-							<div class="portlet-content">
-
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
-
-							</div> <!-- /.portlet-content -->
-
-						</div> <!-- /.portlet -->
-
-			
-
-					</div> <!-- /col-md -->
-
-				<div class="col-md-4">
-
-						<div class="portlet">
-
-							<div class="portlet-header">
-
-								<h3>
-									<i class="fa fa-tasks"></i>
-									Data Preparer
-								</h3>
-
-							</div> <!-- /.portlet-header -->
-
-							<div class="portlet-content">
-
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
-
-							</div> <!-- /.portlet-content -->
-
-						</div> <!-- /.portlet -->
+Select the "Cloak" button to create the cloaked file and the secret file. The browser may warn you that it wants to save multiple files to the file system. It is safe to allow this.	
 
 			
 
-					</div> <!-- /col-md -->			
-
-			</div> <!--.row-->
-
-			<div class="row">
-				<div class="col-md-4">
-
-						<div class="portlet">
-
-							<div class="portlet-header">
-
-								<h3>
-									<i class="fa fa-bar-chart"></i>
-									Data Analyzer
-								</h3>
-
-							</div> <!-- /.portlet-header -->
-
-							<div class="portlet-content">
-
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
-
-							</div> <!-- /.portlet-content -->
-
-						</div> <!-- /.portlet -->
-
-			
-
-					</div> <!-- /col-md -->
-
-				<div class="col-md-4">
-
-						<div class="portlet">
-
-							<div class="portlet-header">
-
-								<h3>
-									<i class="fa fa-key"></i>
-									Data Uncloaker
-								</h3>
-
-							</div> <!-- /.portlet-header -->
-
-							<div class="portlet-content">
-
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
-
-							</div> <!-- /.portlet-content -->
-
-						</div> <!-- /.portlet -->
-
-			
-
-					</div> <!-- /col-md -->			
-
-			</div> <!--.row-->
 
 			
 		</div> <!-- /#content-container -->			
