Update navigation blurbs

--- a/renaissance/navigation.html
+++ b/renaissance/navigation.html
@@ -187,22 +187,24 @@
 		<div id="content-container">
 
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-6">
 
 						<div class="portlet">
 
 							<div class="portlet-header">
 
-								<h3>
-									<i class="fa fa-eraser"></i>
-									Data Cloaker
-								</h3>
+								<a href="cloak.html">
+									<h3>
+										<i class="fa fa-eraser"></i>
+										Data Cloaker
+									</h3>
+								</a>
 
 							</div> <!-- /.portlet-header -->
 
 							<div class="portlet-content">
 
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
+								<p> Anonymize data easily with the Alacer Data Cloaker.  The Cloaker allows users mask or remove confidential, sensitive, or private information from columns in a .csv file.  The Data Cloaker exports separate .csv files for the "cloaked" data and for the appropriate keys illustrating the masked values.</p>
 
 							</div> <!-- /.portlet-content -->
 
@@ -212,7 +214,7 @@
 
 					</div> <!-- /col-md -->
 
-				<div class="col-md-4">
+				<div class="col-md-6">
 
 						<div class="portlet">
 
@@ -227,7 +229,7 @@
 
 							<div class="portlet-content">
 
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
+								<p>Data preparation includes cleaning, managing, and sharing high-quality data.  Alacer offers customized data quality management services that will allow your company to share high-quality data within-house and with others.</p>
 
 							</div> <!-- /.portlet-content -->
 
@@ -240,7 +242,7 @@
 			</div> <!--.row-->
 
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-6">
 
 						<div class="portlet">
 
@@ -255,7 +257,7 @@
 
 							<div class="portlet-content">
 
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
+								<p>Alacer produces cutting-edge data analysis and results presentation.  We routinely assist clients with big data, machine learning, predictive analytics, and visualization solutions.  Our drill-down dashboard is one of several customizable analysis outputs that we can create to fit your needs. </p>
 
 							</div> <!-- /.portlet-content -->
 
@@ -265,7 +267,7 @@
 
 					</div> <!-- /col-md -->
 
-				<div class="col-md-4">
+				<div class="col-md-6">
 
 						<div class="portlet">
 
@@ -280,7 +282,7 @@
 
 							<div class="portlet-content">
 
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
+								<p>Once analysis stages are complete, the Data Uncloaker allows one to recover the unmasked data values, even if the analysis was completed using the cloaked data. Our interface creates a seamless way to transform cloaked values back into their original data.</p>
 
 							</div> <!-- /.portlet-content -->
 
